deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liine
  labels:
    app.kubernetes.io/name: liine
