deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liine
  namespace: liine
  labels:
    app.kubernetes.io/name: liine
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: liine
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: liine
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
